fix spacing on timeline

--- a/css/timeline.scss
+++ b/css/timeline.scss
@@ -6,18 +6,6 @@
 	list-style: none;
 	position: relative;
 
-	@font-face {
-		font-family: 'ecoico';
-		src:url('../fonts/timelineicons/ecoico.eot');
-		src:url('../fonts/timelineicons/ecoico.eot?#iefix') format('embedded-opentype'),
-			url('../fonts/timelineicons/ecoico.woff') format('woff'),
-			url('../fonts/timelineicons/ecoico.ttf') format('truetype'),
-			url('../fonts/timelineicons/ecoico.svg#ecoico') format('svg');
-		font-weight: normal;
-		font-style: normal;
-	} /* Made with http://icomoon.io/ */
-
-
 	/* The line */
 	&:before {
 		content: '';
@@ -26,14 +14,14 @@
 		bottom: 0;
 		width: 10px;
 		background: $timeline_extra;
-		left: 20%;
+		left: 17%;
 		margin-left: -10px;
 	}
 
 	/* The date/time */
 	li .cbp_tmtime {
 		display: block;
-		width: 25%;
+		width: 20%;
 		padding-right: 100px;
 		position: absolute;
 	}
@@ -59,7 +47,7 @@
 
 	/* Right content */
 	li .cbp_tmlabel {
-		margin: 0 0 15px 25%;
+		margin: 0 50px 15px 21%;
 		background: $timeline1;
 		color: #fff;
 		padding: 2em;
@@ -117,25 +105,9 @@
 		border-radius: 50%;
 		box-shadow: 0 0 0 8px $timeline_extra;
 		text-align: center;
-		left: 20%;
+		left: 17%;
 		top: 0;
 		margin: 0 0 0 -25px;
-	}
-
-	.cbp_tmicon-phone:before {
-		content: "\e000";
-	}
-
-	.cbp_tmicon-screen:before {
-		content: "\e001";
-	}
-
-	.cbp_tmicon-mail:before {
-		content: "\e002";
-	}
-
-	.cbp_tmicon-earth:before {
-		content: "\e003";
 	}
 
 	/* Example Media Queries */
